feat: display an agent generating indicator based on the chat store's `isAgentGenerating` state.

--- a/ギルド.md
+++ b/ギルド.md
@@ -13,6 +13,15 @@
 
 「ダンジョンは国家の血脈」
 
+### 巌窟王（がんくつおう）
+
+ダンジョン探索ガチ勢。
+だいたいの大国が承認する非政府組織。
+カリスマダンジョン探索パーティーが始祖。
+国家や貴族が出資。
+ちゃんとした探索などに呼び出される。魔術協会やアカデミアからの信頼も高い。
+もうけを出す人たちではない。
+
 ### 蒼の翼（あおのつばさ）
 
 最大冒険者ギルドのダンジョン事業部。
