Please provide the file changes to generate a commit message.

--- a/王都の名物ダンジョン一覧.md
+++ b/王都の名物ダンジョン一覧.md
@@ -19,25 +19,56 @@
 *   **推奨ランク**：F～E（ルートによる）
 *   **場所**：王都南門から徒歩15分
 *   **特徴**：
-    *   **「王都のタカオ山」**。
+    *   **リフト完備**：入山券を購入すれば、中腹まで自動運行のゴンドラで運んでもらえる。
     *   洞窟エリアを抜けると、絶景の丘陵地帯（山頂）に出られる人気スポット。山頂には茶屋や土産物屋もある。
     *   **ルート分岐**：
         *   **「観光ルート（1号路）」**：スライムすら出ない舗装された道。軽装でOK。
-        *   **「修練ルート（裏山）」**：そこそこの強さのゴブリンや毒虫が出る。新人の実力試しに使われるが、ナメてかかると死ぬ。
+        *   **「修練ルート（6号路）」**：熟練パーティーでも死ぬ。沢沿いの湿地帯で、足場が悪いうえに強力な魔獣が潜んでいる。
     *   **安全装置**：メインルートのみ、強制転移セーフティが完備されている。裏道にはない。
     *   **警告**：観光地化されているが、**年に1回は死亡事故**が起きている。「ダンジョンを舐めるな」という教訓を学ぶ場所でもある。
 
-## 3. 稼ぎの鉄板『鉄鉱の迷宮』
+## 3. 分岐ダンジョン『蛇滝（ジャタキ）』
+*   **管理**：（別区画・独自管理）
+*   **場所**：1号路の途中から分岐する「浄心門」をくぐった先
+*   **推奨ランク**：C～D（滑落注意）
+*   **特徴**：
+    *   **「水と蛇の修行場」**。
+    *   はじまりの洞窟本館とは別の管理区画。滝に打たれる修行スポットがあるが、水辺には「水蛇（バイパー）」や「濡れ女」が出る。
+    *   **難易度**：道が狭く湿っており、足を滑らせて滑落する事故が多発。観光気分で行くと痛い目を見る。
+
+## 4. 聖地『聖王廟（セイオウビョウ）』
+*   **管理**：王都教会・聖守護騎士団
+*   **場所**：山の中腹～山頂エリア
+*   **推奨ランク**：立ち入り禁止（実質Bランク相当）
+*   **特徴**：
+    *   **「王家の墓所」**。
+    *   かつての聖王を祀る霊廟。1階の拝殿は一般開放されており、誰でも参拝できる。
+    *   **裏の顔**：地下がダンジョン化（カタコンベ）しているのは「周知の事実」。
+    *   **現状**：「立入禁止」とされているが、お構いなしに勝手に入り込む冒険者や若者が後を絶たない。中はアンデッドが出る。
+
+## 5. 未踏の魔境『幽閉塔（ユウヘイトウ）』
+*   **管理**：王家（現在は管理放棄）
+*   **推奨ランク**：S（測定不能）
+*   **場所**：王都近郊
+*   **特徴**：
+    *   **「終わりのない無限回廊」**。
+    *   かつて王位継承争いに敗れた王族を幽閉していた塔。いつしか強力な瘴気を放つダンジョンと化した。
+    *   **構造**：内部は次元が歪んでおり、外からは頂上が見えるのに、登っても登っても最上階に辿り着かない。
+    *   **難易度**：王都周辺では**最難関**。過去、数多の英雄が挑んだが、踏破した者は一人もいない。
+
+## 6. 稼ぎの鉄板『鉄板迷宮（てっぱんめいきゅう）』
 *   **管理**：鉄人会（※反社系）
-*   **推奨ランク**：D～C
+*   **推奨ランク**：D～C（地下5階まで）
 *   **場所**：王都西区・スラム地下直結
 *   **特徴**：
-    *   **「資源採掘特化型」**。
-    *   高品質な鉄鉱石、ミスリルが採れるが、採掘権は鉄人会が独占。冒険者は「採掘作業員」または「護衛」として雇われる形になる。
-    *   **労働環境**：劣悪。24時間稼働。魔物よりも、ノルマに追われた監督官の方が怖いという噂も。
-    *   **注意**：無許可で鉱石を持ち出すと、指を詰められる（物理）。
+    *   **「鉄で補強された迷宮」**。
+    *   元々崩落しやすかったため、そこらじゅうを鉄板で補強していたら、それが名物化してこの名がついた。
+    *   **構造**：
+        *   **地下1～5階**：鉄板であちこち補強されている。労働者たちが金属系モンスターを「作業」として狩っている。
+        *   **地下6階以降**：補強がなされておらず、ほぼ未整備。一転して崩落の危険がある未踏地帯。
+    *   **注意**：無許可で素材を持ち出すと、指を詰められる（物理）。
 
-## 4. 観光ダンジョン『クリスタル・パレス』
+## 7. 観光ダンジョン『クリスタル・パレス』
 *   **管理**：金羊（商人ギルド）
 *   **推奨ランク**：観光客向け（護衛つきなら誰でも可）
 *   **場所**：王都北・リゾート区画
@@ -47,7 +78,46 @@
     *   **アトラクション**：安全な通路から、檻の中の狂暴な魔物を観察できる「サファリツアー」がある。
     *   **お土産**：出口で売っている「クリスタル饅頭」が名物。
 
-## 5. 研究者の墓場『深淵書架（アーカイブ）』
+    *   **併設施設：『パレス・ホテル』**
+        *   **特徴**：
+            *   クリスタル・パレスが経営する隣接高層ホテル。客室からは輝くダンジョンを一望できる。
+            *   **構造**：45階にラウンジがあり、宿泊客はそれより上の階（VIPフロア）に泊まる。
+            *   **隠しダンジョン**：1階から45階ラウンジへは通常「転送ポート」で移動するが、あえて**階段**を使うと、その道中はダンジョンになっている。
+
+    *   **アトラクションダンジョン**：
+        *   **『ボーン・マンション』**：スケルトンやゴーストが出るお化け屋敷型ダンジョン。恐怖演出に特化しており、カップルの吊り橋効果狙いに最適。
+        *   **『ホワイトキャッスル』**：純白の城壁で構成された「美しき攻城戦」エリア。白い騎士が相手をしてくれる勇者体験コース。
+
+## 8. 闘技都市『ドーム・シティ』
+*   **管理**：帝国資本（表向きは民間興行会社）
+*   **推奨ランク**：観光～B（闘技場参加者）
+*   **場所**：王都北東・帝国租界エリア
+*   **特徴**：
+    *   **「戦いと娯楽の殿堂」**。
+    *   パレス（トンファ資本）に対抗して建設された、帝国資本のリゾート区画。
+    *   **中央闘技場（コロシアム）**：メイン施設。モンスター同士、あるいは人間対モンスターの試合が毎日行われている。
+    *   **複合施設**：闘技場の周りには巨大な劇場やカジノ、高級ホテルが立ち並び、パレスよりも「刺激的」な夜遊び提供している。
+    *   **噂**：帝国の最新技術（魔導機械）のデモンストレーションの場も兼ねているらしい。
+
+## 9. 天空リゾート『聖域エデン』
+*   **管理**：聖教会（王家出資）
+*   **推奨ランク**：観光～A（VIPエリア）
+*   **場所**：王都上空・浮遊島（転送ゲートで移動）
+*   **特徴**：
+    *   **「生きて行ける天国」**。
+    *   ドーム・シティ（帝国）の「興奮」に対抗して作られた、聖王国の「安らぎ」の象徴。
+    *   **聖水スパ**：若返りや病気平癒の効果がある「聖なる泉」がメイン。天使型ゴーレムが給仕してくれる。
+    *   **システム**：入場料は高いが、オプションの「免罪符（その場で罪をリセットできる権利）」が飛ぶように売れる。
+    *   **裏の顔**：中毒性の高い「至福」を与えて信者を囲い込む洗脳施設という噂がある。
+
+    *   **徒歩ルート：『試練の塔』**
+        *   **特徴**：
+            *   地上と浮遊島を物理的に繋ぐ、天を衝く巨塔。
+            *   **「管理された難攻不落」**。
+            *   教会がすべてのフロアを完全管理・監視しているにも関わらず、突破困難なダンジョンとして機能している稀有な事例。
+            *   内部には聖騎士団の精鋭や、強力な「神の試練（ガーディアン）」が配置されており、実力でエデンに入ろうとする者を阻む。
+
+## 10. 研究者の墓場『深淵書架（アーカイブ）』
 *   **管理**：巌窟王（非公式協力：狂天）
 *   **推奨ランク**：A以上（生還率お察し）
 *   **場所**：王都地下深層・封鎖区画
@@ -57,7 +127,7 @@
     *   **客層**：一攫千金を狙うトップエリートか、禁断の知識を求めるマッドサイエンティスト（狂天）。
     *   **噂**：最深部には「願いを叶える魔神」がいるとも、「狂天の研究施設」があるとも言われる。
 
-## 6. ゴミ処理場『腐敗の沼』
+## 11. ゴミ処理場『腐敗の沼』
 *   **管理**：王都市政庁（委託：ロプシー部族）
 *   **推奨ランク**：立ち入り禁止
 *   **場所**：下水道最奥
