Please provide the file changes to generate a commit message.

--- a/王都の名物ダンジョン一覧.md
+++ b/王都の名物ダンジョン一覧.md
@@ -27,7 +27,7 @@
     *   **安全装置**：メインルートのみ、強制転移セーフティが完備されている。裏道にはない。
     *   **警告**：観光地化されているが、**年に1回は死亡事故**が起きている。「ダンジョンを舐めるな」という教訓を学ぶ場所でもある。
 
-## 3. 分岐ダンジョン『蛇滝（ジャタキ）』
+## 3. 分岐ダンジョン『大蛇蛇滝（オロチジャタキ）』
 *   **管理**：（別区画・独自管理）
 *   **場所**：1号路の途中から分岐する「浄心門」をくぐった先
 *   **推奨ランク**：C～D（滑落注意）
@@ -88,7 +88,7 @@
         *   **『ボーン・マンション』**：スケルトンやゴーストが出るお化け屋敷型ダンジョン。恐怖演出に特化しており、カップルの吊り橋効果狙いに最適。
         *   **『ホワイトキャッスル』**：純白の城壁で構成された「美しき攻城戦」エリア。白い騎士が相手をしてくれる勇者体験コース。
 
-## 8. 闘技都市『ドーム・シティ』
+## 8. 闘技都市『王都ドーム・シティ』
 *   **管理**：帝国資本（表向きは民間興行会社）
 *   **推奨ランク**：観光～B（闘技場参加者）
 *   **場所**：王都北東・帝国租界エリア
@@ -117,7 +117,53 @@
             *   教会がすべてのフロアを完全管理・監視しているにも関わらず、突破困難なダンジョンとして機能している稀有な事例。
             *   内部には聖騎士団の精鋭や、強力な「神の試練（ガーディアン）」が配置されており、実力でエデンに入ろうとする者を阻む。
 
-## 10. 研究者の墓場『深淵書架（アーカイブ）』
+## 10. 北の水源『給水塔』
+*   **管理**：王都市政庁（管理者接近不可）
+*   **推奨ランク**：不明
+*   **場所**：北部の山の水源付近
+*   **特徴**：
+    *   **「奪われた水源」**。
+    *   王都は豊富な水源をもつ水の都であるが、その水源のひとつである北部の山の水源付近がダンジョン化して管理者が近寄れなくなっている。
+
+
+
+## 11. 湖底都市『空気の底』
+*   **管理**：不明（侵入困難）
+*   **推奨ランク**：不明（Aランク以上？）
+*   **場所**：北部の山の水源・湖底
+*   **特徴**：
+    *   **「沈んだ旧市街」**。
+    *   その水源の湖底に沈んだ旧市街。聖教会とは異なる信仰がみられ、いわくつき。
+    *   **状況**：元々ダンジョンだったが、周辺（給水塔付近）までダンジョン化したため、さらに難易度があがった。
+
+## 12. 北の隠れ湯『虹の湯畑』
+*   **管理**：なし
+*   **推奨ランク**：観光客～
+*   **場所**：北部の山
+*   **特徴**：
+    *   **「癒やしの秘湯」**。
+    *   一応ダンジョンに分類されるが、ふつうの温泉。
+    *   **注意**：魔物は出ないが、覗き魔が出る。
+
+## 13. 秘湯の奥『魔物湯』
+*   **管理**：なし（危険区域）
+*   **推奨ランク**：D～C（入浴時注意）
+*   **場所**：虹の湯畑・洞窟ダンジョン最奥
+*   **特徴**：
+    *   **「混浴（モンスターと）」**。
+    *   湯畑にある洞窟ダンジョンの奥にある秘湯。
+    *   **客層**：普通に魔物が出るし、魔物も温泉につかっている。「行くな」と言われているのに、スリルを求める若者や冒険者がみんな行ってしまう。
+
+
+## 14. 廃墟群『廃棄旅館街』
+*   **管理**：なし
+*   **推奨ランク**：D～C
+*   **場所**：虹の湯畑周辺
+*   **特徴**：
+    *   **「夢の跡地」**。
+    *   温泉ブームで乱立した旅館街。いまはそのほとんどが廃業し、廃墟となっている。
+
+## 15. 研究者の墓場『深淵書架（アーカイブ）』
 *   **管理**：巌窟王（非公式協力：狂天）
 *   **推奨ランク**：A以上（生還率お察し）
 *   **場所**：王都地下深層・封鎖区画
@@ -127,7 +173,7 @@
     *   **客層**：一攫千金を狙うトップエリートか、禁断の知識を求めるマッドサイエンティスト（狂天）。
     *   **噂**：最深部には「願いを叶える魔神」がいるとも、「狂天の研究施設」があるとも言われる。
 
-## 11. ゴミ処理場『腐敗の沼』
+## 16. ゴミ処理場『腐敗の沼』
 *   **管理**：王都市政庁（委託：ロプシー部族）
 *   **推奨ランク**：立ち入り禁止
 *   **場所**：下水道最奥
@@ -136,6 +182,16 @@
     *   生活排水、産業廃棄物、そして「処理された死体」が捨てられる場所。
     *   **生態系**：汚泥スライムや強力な病原菌ウィルスを持つ変異種がウヨウヨしている。
     *   **住人**：一部のロプシーや、追われる身の犯罪者が隠れ住んでいる。誰も近づかないため、ある意味で一番安全な隠れ家でもある。
+
+
+## 17. 未踏遺跡『大下水道』
+*   **管理**：不明
+*   **推奨ランク**：不明（未踏破）
+*   **場所**：王都地下
+*   **特徴**：
+    *   **「謎の地下遺跡」**。
+    *   王都の地下深くに眠る遺跡。王都で使われた水は、現状この遺跡に垂れ流されている。
+    *   **現状**：誰も踏破した者はおらず、奥がどうなっているのか、誰も理解していない。
 
 ---
 **編集部の注記**：
