Please provide the file changes you would like me to summarize.

--- a/女戦士.md
+++ b/女戦士.md
@@ -4,7 +4,7 @@
 
 （独占スクープ）
 
-王都の英雄譚に必ず出てくる名前――トップギルド《天耀（てんよう）の白鴉（しろがらす）》。
+王都の英雄譚に必ず出てくる名前――トップギルド《天耀（てんよう）》の筆頭パーティー《白鴉（しろがらす）》。
 だが本誌が追うのは“英雄”ではない。**英雄の踏み台にされた側**だ。
 
 今回インタビューに応じたのは、同ギルドを離脱した女戦士（仮名：**ミラ**、元前衛・剣盾）。
