feat: Add Zod schema support to the Schema interface and a utility function to convert Zod schemas to JSON schemas.

--- a/有名冒険者名鑑.md
+++ b/有名冒険者名鑑.md
@@ -8,67 +8,204 @@
 ### 1. 剣聖『シグルド・レオンハート』
 *   **所属**：蒼の翼（名誉顧問）
 *   **二つ名**：「王都の守護剣」「歩く伝説」
+*   **主な武勲（7回死んだ男）**：
+    *   **古龍討伐**：30年前、山越えの洞窟に居座る古龍を、そこを通るために討伐。その際、折れた竜の牙が心臓に突き刺さり、三日三晩生死の境をさまよった。完治後も牙は心臓に残ったままであり、それにより「竜の加護」を得たとされる。
+    *   **敵地制圧**：率いる軍で敵砦を攻略した際、敵地に取り残されたが、籠城するどころかそのまま隣の砦まで攻め落とし、縦横無尽に敵地をひっかきまわした。戦後、三日三晩生死の境をさまよう。
+    *   **次元からの生還**：敵国の精鋭魔術士団に次元の狭間へ吹き飛ばされたが、1年後、大陸中央のアビスダンジョンから生きて帰還。期せずしてダンジョン踏破記録を98階まで更新した。
+    *   **深海の外交**：海峡を渡る際、船を襲った大王イカ（クラーケン）を討伐するため海に飛び込み、死んだと思われたが、人魚たちに助けられる。そのまま人魚の国『パラパラパール』に居候しながら海溝の主リヴァイアサンを討伐。人魚の国との国交を樹立した。
+    *   **精力外交**：暗殺教団との交渉で猛毒の酒を飲み干し、三日三晩生死の境をさまよう。しかし、副作用で枯れていた性欲が劇的に増進。後にその毒を応用して魔術協会と「魔法のED薬」を開発したところ、各国貴族に爆発的に普及し、外交官100人分の国益をもたらした。
+    *   **魔神との肉弾戦**：魔神が「魔力を吸収する魔剣」を持っていたため、最終的に素手（ステゴロ）で殴り倒した。全身複雑骨折し、三日三晩生死の境をさまよう。
+    *   **魔剣の避雷針**：その魔剣を利用し、敵軍の雷魔法を全て吸収。限界まで溜め込んだ魔剣を敵陣に投げ込み、広範囲を爆散させて壊滅させた。至近距離で爆風を浴び、三日三晩生死の境をさまよう。
 *   **表の顔**：
-    *   30年前に古龍を単独討伐した伝説の英雄。
     *   現在は第一線を退き、若手の育成やギルドの顧問として、人格者として尊敬を集めている。
+    *   王家からの信頼も厚く、剣術指南役も務める。
 *   **裏の顔（ゴシップ）**：
-    *   **重度の甘党**。王都のスイーツ店で目撃情報多数。
-    *   実は**孫娘（魔法学園生）に激アマ**で、孫の前ではデレデレのおじいちゃんになる。孫が「魔王倒したい」と言い出したら、全財産で装備を買い揃えかねない親バカならぬ「爺バカ」。
+    *   **重度の甘党**。王都のスイーツ店で目撃情報多数。「限定」という言葉に弱い。
+    *   **孫バカの極み**。魔法学園に通う孫娘（アリス）には基本、下僕のように尽くす。
+        *   孫が「ドラゴンステーキ食べたい」と呟けば、翌日には討伐したての赤竜肉が届く。
+        *   孫に近づく男（5歳）に対して正式な決闘を申し込んだことがある。
 
 ### 2. 轟雷の賢者『エレナ・スターライト』
 *   **所属**：フリー（魔術協会・特別会員）
 *   **二つ名**：「移動要塞」「歩く戦略兵器」
+    *   **竜の血脈**：彼女の系譜を遡ると、三匹の古龍に行き着くと言われている。
+    *   **水源の調停**：水源を巡って争いの絶えない二つの村があった際、彼女は物理的に水源を吹き飛ばし、両方の村を干上がらせて争いを終わらせた。
+    *   **生贄の火山**：火山を鎮めるために生贄を捧げる風習のある村に対し、彼女は火山を人為的に噴火させ、村ごと溶岩に飲み込ませた。
+    *   **帝国の呪地**：かつて帝国で発生したスタンピードの原因が「魔物の幼生を加工する魔石工場」であると知るや、莫大な魔力でスタンピードを焼き払った上、あえて魔物の死骸を放置した。平原は腐敗して呪われた地となり、帝国に対する永遠の警告と戒めとなっている。
 *   **表の顔**：
-    *   広範囲殲滅魔法のエキスパート。彼女が戦場に出ると地形が変わる。
-    *   王国の魔法顧問も務めるクールビューティー。
+    *   王国の魔法顧問も務めるクールビューティー。冷静沈着で完璧主義者に見える。
 *   **裏の顔（ゴシップ）**：
-    *   **研究の虫**。研究に没頭しすぎて、私生活が壊滅的。部屋はゴミ屋敷で、食事はレーション（保存食）か、弟子の差し入れで済ませている。
-    *   **借金持ち**。研究費が嵩んでおり、実は金欠。高額依頼には即飛びつく。
+    *   **生活能力ゼロ**。研究以外のことには興味がなく、部屋は魔導書と実験器具とゴミの山。通称「魔女のゴミ屋敷」。
+    *   **極貧賢者**。稼いだ金は全て希少な魔導触媒や古文書に消えるため、常に金欠。
+        *   主食は「水と栄養バー」。たまに弟子が見かねて差し入れを持ってくるが、腐らせることも多い。
+    *   **極貧賢者**。稼いだ金は全て希少な魔導触媒や古文書に消えるため、常に金欠。
+        *   主食は「水と栄養バー」。たまに弟子が見かねて差し入れを持ってくるが、腐らせることも多い。
+        *   高額依頼のポスターを見ると、クールな瞳が金貨の形におかしくなる。
 
-## A～Bランク級（実力派・曲者）
+### 3. 至高の聖女『マリアンヌ・グレイス』
+*   **所属**：聖教会（破門寸前）
+*   **二つ名**：「慈愛の聖女」「死神の天敵」
+*   **主な武勲（伝説）**：
+    *   **不死の肉体**：彼女自身が「何らかの呪いか祝福」による不死者であり、どれだけ生命力を削っても死ぬことがない。
+    *   **血塗れの蘇生**：本来、自らの命を削る蘇生魔法を、彼女は血反吐を撒き散らしながら無限に行使する。その狂気的な姿は、敵味方問わず見る者にトラウマを植え付ける。
+    *   **泥沼の和平**：彼女を擁する軍は絶対に負けることがない。自軍が圧倒的な劣勢にあっても、味方が死ねば蘇生するを繰り返すからである。ついには形勢が逆転するも、今度は敵を蘇生する。このやり方で、彼女はこれまでに9つの戦争を止めている。
+    *   **慈愛の精神攻撃**：幾度となく刺客に命を狙われるが、心臓を刺し貫かれたまま、逆に刺客の古傷や持病を完治させる。そのあまりの「聖女ぶり（狂気）」に、大抵の刺客は心が折れて廃業する。だいたいそのままファンになる。
+    *   **処刑保留**：異端として教会から正式に何度も処刑されているが、斬首でも火刑でも死ななかったため、教会側も扱いあぐねて「処遇保留」のまま放置されている。
+*   **表の顔**：
+    *   どんな怪我人にも分け隔てなく接する、微笑みの絶えない聖女様。
+*   **裏の顔（ゴシップ）**：
+    *   **戦闘狂（バトルジャンキー）ヒーラー**。
+        *   「生きてるだけでみんなハッピー」がモットー。
+        *   敵を瀕死にしては回復させ、また殴るという「無限コンボ」の考案者。敵兵からは「悪魔より怖い」と恐れられている。
 
-### 3. 黒衣の処刑人『ジャック・ザ・リッパー』
+### 4. 弓聖『ホークアイ』
+*   **所属**：風の旅団（元リーダー）
+*   **二つ名**：「千里眼」「逃げ場なし」
+*   **主な武勲（伝説）**：
+    *   **星落とし（メテオ・スナイプ）**：成層圏を通過する流星を矢で射抜き、魔力で保護して燃え尽きさせず、そのまま目標に落下させる。その威力はもはや「戦略兵器」であり、彼を単なる弓兵だと思っている者はいない。
+    *   **竜落とし**：かつて、同じことをドラゴンでやったことがある。
+    *   **理外の直射**：戦場では地形的有利（丘）も取らず、曲射も用いない。ただ真っ直ぐに放たれた矢は、密集する敵味方をあたかも幻影のようにすり抜け、標的のみを正確に射抜く。
+    *   **共振破壊**：「珍しく何発も射ているなあ」と思われた直後、堅牢な城壁が音を立てて崩れ落ちた。一点に衝撃を与え続け、物理的な共振を引き起こして破壊したとされる。
+    *   **弓兵の拳**：「接近戦なら勝てる」と襲い掛かってきた重装歩兵を、鉄兜ごと素手で叩き潰した。彼の場合、そもそも接近戦も強い。
+
+*   **表の顔**：
+    *   寡黙で職人気質の狩人。自然を愛するナイスミドル。
+*   **裏の顔（ゴシップ）**：
+    *   **超ド近眼**。
+        *   遠くの敵（3キロ先）のまつ毛の本数は見えるが、手元のメニューが読めない。
+        *   食事中、フォークと間違えてナイフで口を刺そうとしたり、挨拶してきた美人と間違えて観葉植物に話しかける事案が多発。
+
+### 5. 拳帝『ガンドルフォ』
+*   **所属**：武神殿
+*   **二つ名**：「粉砕王」「素手喧嘩最強」
+*   **主な武勲（伝説）**：
+    *   **直進行軍**：中央大陸を横断する真っ直ぐな溝は、彼が単に「真っ直ぐに歩く」という修行を行った結果である。進路上のあらゆる障害物を破壊して直進し続けたため、4つの軍と戦争になった。
+    *   **虫の駆除**：マフィアのボスと会食の際、ボスの頭に毒虫が止まったため、「危ない！」と叫んでボスごと叩き潰してしまった。悪気はなかった。
+    *   **整地（マウンテン・クラッシュ）**：「月が見えない」という理由だけで、邪魔な山を素手で叩き潰して水平に整地した。
+*   **表の顔**：
+    *   筋骨隆々の巨漢。豪快な笑い声がトレードマークの親分肌。
+*   **裏の顔（ゴシップ）**：
+    *   **乙女回路搭載**。
+        *   趣味は編み物とお菓子作り（プロ級）。
+        *   ファンシーなカフェ巡りが好きだが、体がデカすぎて入店拒否されるのが悩み。
+
+### 6. 影の王『ファントム』
+*   **所属**：なし（誰も彼を知らない）
+*   **二つ名**：「認識票のない男」「存在確率0%」
+*   **主な武勲（伝説）**：
+    *   **マフィアの同居人**：一ヶ月間、敵対マフィアのボスの寝室に勝手に住み着いていた。一緒に食事をし、風呂に入り、同じベッドで寝ていたが、ボスは彼を「空気」として認識していた。退去時に「お世話になりました」と置き手紙を残した結果、ボスは恐怖のあまり引退した。
+    *   **枕元の警告**：戦争中の二国の王の寝室に侵入し、互いの国の至宝である剣を入れ替えて枕元に置いた。「いつでも殺せる」という無言の圧力により、両国は即座に戦争をやめた。
+    *   **同時粛清**：対立する裏組織の大物3人を、別々の場所にいたにも関わらず「同日同時刻」に殺害した。そのとき取引中だった4人目の大物は、即座に彼の軍門に下った。
+    *   **暗殺のこだわり**：マフィアのボスを一度は追い詰めたが、「シチュエーションがしっくりこない」という理由で見逃し、後日改めて殺し直したことがある。彼なりの美学があるらしい。
+    *   **徒歩殲滅**：「見つけさえすればどうとでもなる」と豪語していた敵対ギルドが、正面からとことこ歩いてきた彼に、成す術なく殲滅された。隠密しなくても普通に強い。
+
+*   **表の顔**：
+    *   （思い出そうとすると頭痛がする）
+*   **裏の顔（ゴシップ）**：
+    *   **世界からの無視（バグ）**。
+        *   自動追尾型の魔法やミサイルが、彼を認識できずに素通りしていく。
+        *   彼が喋ると「どこからか声がする…心霊現象か？」と周囲がパニックになる。
+        *   指名手配されたが、似顔絵が書けず（誰も顔を覚えていない）、手配書が白紙で発行された。
+        *   その手配書が気に入らず、自分で似顔絵を描いて受付に提出したことがある。
+
+### 7. 竜騎士『カイン・ドラグニル』
+*   **所属**：王立騎士団（特別顧問）
+*   **二つ名**：「天空の覇者」「竜と共に生きる者」
+*   **主な武勲（伝説）**：
+    *   **エンシェント・ドラゴンの服従**：誇り高い伝説の古龍と一騎打ちの末、認め合い、主従の契約を結んだ。
+*   **表の顔**：
+    *   白銀の鎧に身を包んだ、まさに王子様のようなイケメン騎士。
+*   **裏の顔（ゴシップ）**：
+    *   **古龍のペット（下僕）**。
+        *   実際は古龍に「暇つぶし」として飼われている。
+        *   **重度の乗り物酔い**持ち。ドラゴンの背中に乗ると3分でリバースするため、移動はいつもドラゴンの足に掴まって運ばれている（荷物扱い）。
+        *   「カイン！散歩の時間よ！」とドラゴン（メス）に連れ回されている姿が目撃されている。
+
+### 8. 錬金王『ミダス』
+*   **所属**：黄金の天秤（オーナー）
+*   **二つ名**：「金の生む指」「経済の破壊者」
+*   **主な武勲（伝説）**：
+    *   **賢者の石の量産**：伝説の「賢者の石」を量産し、それを燃料にしてお湯を沸かし、カップ麺を食べたという逸話がある。
+    *   **国家買収**：戦争になりかけた敵国を、ポケットマネーで国ごと買い取って戦争を回避した。
+*   **表の顔**：
+    *   金に糸目をつけない大富豪。派手なローブを纏った自信家。
+*   **裏の顔（ゴシップ）**：
+    *   **金（ゴールド）アレルギー**。
+        *   過去に金を生成しすぎて呪いにかかり、金貨に触れると蕁麻疹が出る。
+        *   支払いは全て「ツケ」か「物々交換（賢者の石など）」。
+        *   大富豪なのに現金を持てないため、屋台の焼き鳥1本が買えず、賢者の石で支払おうとして店主に怒られた。
+
+### 9. 運命のギャンブラー『ジョーカー』
+*   **所属**：カジノ『ロワイヤル』（出禁）
+*   **二つ名**：「確率の支配者」「イカサマ殺し」
+*   **主な武勲（伝説）**：
+    *   **コイントス戦争**：二国間の戦争の決着を、国王同士のコイントスで決めさせた。コインは地面に落ちず、直立したまま止まり「引き分け（和平）」となった。
+*   **表の顔**：
+    *   キザなスーツを着こなす、謎めいた伊達男。
+*   **裏の顔（ゴシップ）**：
+    *   **日常運がマイナス**。
+        *   「命を懸けたギャンブル」以外では全戦全敗。
+        *   ジャンケンで子供に負け、天気予報は必ず外れる（彼が傘を持つと晴れる）。
+        *   歩けば犬のフンを踏み、食事処では必ず注文を間違えられる不運のデパート。でもポーカーで銃口を突きつけられると無敵になる。
+
+### 10. 黒衣の処刑人『ジャック・ザ・リッパー』
 *   **所属**：鉄人会（掃除屋）
+*   **主な武勲（仕事）**：
+    *   **「豚男爵」暗殺事件**：かつて人身売買を行っていた悪徳貴族の館に単身乗り込み、警備兵50人を殺傷せず無力化した上で、標的のみを正確に仕留めた。
+    *   **音速の解体ショー**：大型魔獣を瞬きする間に解体することで知られる。素材の剥ぎ取り速度はギルド一。
 *   **表の顔**：
-    *   鉄人会の汚れ仕事を請け負う暗殺者系冒険者。
-    *   目にも止まらぬ速さでナイフを操り、モンスターの急所を的確に穿つ。
+    *   鉄人会の汚れ仕事を請け負う無口な暗殺者。
 *   **裏の顔（ゴシップ）**：
-    *   実は**極度の潔癖症**。返り血を浴びるのが実は大嫌い。
-    *   仕事の後は、銭湯（虹の湯畑など）で3時間は体を洗わないと気が済まない。
+    *   **病的な潔癖症**。
+        *   「汚れる仕事」が専門なのに、血や内臓が大嫌い。返り血を避ける技術だけが異常に発達した結果、今の超高速戦闘スタイルが完成した。
+        *   戦闘後は速攻で銭湯へ直行。マイ桶、マイ石鹸を持参し、3時間は出てこない。
+        *   自宅はモデルルームのように綺麗だが、誰も招待されない（汚れるから）。
 
-### 4. 盾の乙女『ブリジット』
+### 11. 盾の乙女『ブリジット』
 *   **所属**：銀の盾（重装歩兵隊長）
+*   **主な武勲（伝説）**：
+    *   **「生ける城門」**：ダンジョンの崩落から仲間を逃がすため、落ちてくる天井を大盾と自身の背中だけで支え続けた。
+    *   **オーガ・スローイング**：突進してきたオーガ（巨鬼）を、盾ごと弾き飛ばしたことがある。
 *   **表の顔**：
-    *   鉄壁の防御を誇る重戦士。仲間を守るために体を張る姉御肌。
-    *   「彼女の背中に隠れれば絶対に安全」と言われる。
+    *   身長2メートルの巨女。仲間を守る頼れる姉御。
 *   **裏の顔（ゴシップ）**：
-    *   **大酒飲み**。酒癖が悪く、酔うと脱ぎだすか、説教を始めるか、泣き上戸になるかの三択ロシアンルーレット。
-    *   翌日は必ず二日酔いで死んでいる。
+    *   **酒乱の極み**。
+        *   素面（シラフ）では真面目だが、酒が入るとタガが外れる。
+        *   「脱ぎ癖」があり、酒場で鎧をキャストオフし始めるのは王都の名物（？）。
+        *   愛用の大盾には「鉄壁くん」という可愛らしい名前をつけており、毎晩磨きながら話しかけているらしい。
 
-### 5. 速射の『ビリー・ザ・キッド』
+### 12. 速射の『ビリー・ザ・キッド』
 *   **所属**：フリー
+*   **主な武勲（伝説）**：
+    *   **2キロのワイバーン撃ち**：上空を飛ぶワイバーンの眉間を、2キロ先から魔導ライフルで撃ち抜いた。
+    *   **早撃ち0.1秒**：酒場の喧嘩で、相手が剣を抜く前に3発撃ち込み（急所は外して）、ズボンのベルトを落とさせた。
 *   **表の顔**：
-    *   帝国の最新鋭「魔導銃」を操るガンマン。
-    *   遠距離からの精密射撃で、気づかれずに獲物を仕留める。
+    *   帝国の最新鋭「魔導銃」を操るクールなガンマン。
 *   **裏の顔（ゴシップ）**：
-    *   **メカオタク**。銃の手入れをし始めると、周りが見えなくなる。
-    *   新しいパーツや弾丸の話になると早口になるので、誰も話しかけなくなる。
+    *   **重度のメカ・銃オタク**。
+        *   愛銃の名前は「ベッツィー」。寝る時も一緒。
+        *   銃の手入れ中に話しかけるとマジギレする。
+        *   新しいスコープや火薬の話になると、早口で止まらなくなり、相手が引いていることに気づかないコミュ障の一面も。
 
 ## 色物・カルト枠（要注意人物）
 
-### 6. 爆裂狂『ニトロ』
+### 13. 爆裂狂『ニトロ』
 *   **所属**：狂天（爆破工作員）
+*   **罪状（武勲ではない）**：
+    *   **「開かずの扉」爆破事件**：古代遺跡の仕掛けを解くのが面倒で、C4級の爆裂魔法で遺跡ごと吹き飛ばし、中の宝ごと瓦礫の山に変えた。
+    *   **王都下水道ガス爆発未遂**：新開発の魔法薬を実験し、王都のトイレを一斉に逆流させかけた。
 *   **特徴**：
-    *   「爆発は芸術だ」を地で行く危険人物。
-    *   ダンジョン内で爆破魔法を乱発し、崩落事故を起こしかけたこと数回。
-    *   ギルドからはブラックリスト入りされており、正規の依頼は受けられない。
+    *   「爆発こそ芸術、破壊こそ創造」という危険思想の持ち主。
+    *   ギルドのブラックリスト筆頭だが、火力の高さだけは認められており、誰もやりたがらない「岩盤破砕」などの土木工事依頼が来ることもある。
 
-### 7. 猛獣使い『ロプシーの婆様』
-*   **所属**：なし（スラム街の顔役）
+### 14. 猛獣使い『ロプシーの婆様』
+*   **所属**：なし（スラム街・ロプシー族の長老）
+*   **影響力（伝説）**：
+    *   **「赤の愚連隊」失踪事件**：かつてスラム街でロプシー族に手を出したチンピラ集団が、翌日、全員地下水路で見つかった。全身をネズミに齧られた跡があり、以降、誰も婆様には逆らわなくなった。
 *   **特徴**：
-    *   王都の地下下水道に住むロプシー族の長老。
-    *   巨大なネズミや汚泥スライムを手足のように操る。
-    *   表社会には出てこないが、地下の情報通として、裏稼業の人間からは一目置かれている。
+    *   王都の地下下水道に独自の情報網を持つロプシー族の顔役。
+    *   数百匹の「ドブネズミ」や「汚泥スライム」と意思疎通ができ、王都中の噂話（特にトイレや風呂場での密談）を把握していると言われている。
+    *   表向きはただの薄汚い老婆だが、王宮の裏工作員も彼女には敬語を使う。
 
 ---
 **本誌の注記**：
