feat: implement auto-scrolling for the chat panel

--- a/有名冒険者名鑑.md
+++ b/有名冒険者名鑑.md
@@ -110,43 +110,59 @@
 
 ### 7. 竜騎士『カイン・ドラグニル』
 *   **所属**：王立騎士団（特別顧問）
-*   **二つ名**：「天空の覇者」「竜と共に生きる者」
+*   **二つ名**：「天空の覇者」「七竜を駆る男」
 *   **主な武勲（伝説）**：
-    *   **エンシェント・ドラゴンの服従**：誇り高い伝説の古龍と一騎打ちの末、認め合い、主従の契約を結んだ。
+    *   **七竜の血盟**：伝説級の古龍7姉妹と血の契約を交わし、その全てを従える人類史上初の多重契約者。
+    *   **成層圏ダイブ（メテオ・フォール）**：上空1万メートルを飛ぶドラゴンの背から飛び降り、落下エネルギーを全て乗せた一撃で敵拠点を粉砕する。迎撃不可能な速度での奇襲攻撃。
 *   **表の顔**：
     *   白銀の鎧に身を包んだ、まさに王子様のようなイケメン騎士。
 *   **裏の顔（ゴシップ）**：
-    *   **古龍のペット（下僕）**。
-        *   実際は古龍に「暇つぶし」として飼われている。
-        *   **重度の乗り物酔い**持ち。ドラゴンの背中に乗ると3分でリバースするため、移動はいつもドラゴンの足に掴まって運ばれている（荷物扱い）。
-        *   「カイン！散歩の時間よ！」とドラゴン（メス）に連れ回されている姿が目撃されている。
+    *   **お宝回収係（パシリ）**。
+        *   7姉妹は全員極度のお宝好きで、彼は彼女たちのコレクションを収集するために世界中を走り回らされている。
+        *   「カイン！新しい宝石（おやつ）持ってきて！」と呼び出されるのが日常。
+    *   **極度の三半規管の弱さ**。
+        *   **限界時間は3分**：ドラゴンの激しい動きに耐えられず、乗ってから3分で限界を迎える。
+*   **七竜姉妹（プロフィール）**：
+    1.  **長女：紅（ルージュ）** - バトル大好き。暴力的を愛情表現だと思ってる。気に入らないと燃やす。
+    2.  **次女：蒼（アズール）** - 知識大好き。魔導書コレクター。インテリだが話が長い。
+    3.  **三女：翡翠（ジェイド）** - 植物大好き。医学薬学の神。たまにらりってる。
+    4.  **四女：白（ブラン）** - 宝石。美容グッズ好き。カインにマッサージを要求する。
+    5.  **五女：黒（ノワール）** - 食通。魔物大好き。魔物も食べる。
+    6.  **六女：黄金（オール）** - 金大好き。守銭奴。カインの給料を管理（没収）している。
+    7.  **七女：銀（シルバ）** - 武器オタク。戦争大好き。カインの装備を勝手に改造する。
 
 ### 8. 錬金王『ミダス』
 *   **所属**：黄金の天秤（オーナー）
 *   **二つ名**：「金の生む指」「経済の破壊者」
 *   **主な武勲（伝説）**：
-    *   **賢者の石の量産**：伝説の「賢者の石」を量産し、それを燃料にしてお湯を沸かし、カップ麺を食べたという逸話がある。
-    *   **国家買収**：戦争になりかけた敵国を、ポケットマネーで国ごと買い取って戦争を回避した。
+    *   **賢者の石の量産**：異世界研究にとりつかれている。伝説の「賢者の石」を量産し、それを燃料にしてお湯を沸かし、カップ麺なるものを食べたという逸話がある。
+    *   **国家買収**：お金が欲しいので戦争を起こし、お金にならないので戦争をやめさせた。
+    *   **アイテムの暴力**：彼自身の戦闘能力は一般人並みだが、収集した伝説級の武器や魔道具が常軌を逸しており、その火力は単独で一国の軍隊に匹敵する。
+
 *   **表の顔**：
     *   金に糸目をつけない大富豪。派手なローブを纏った自信家。
 *   **裏の顔（ゴシップ）**：
     *   **金（ゴールド）アレルギー**。
-        *   過去に金を生成しすぎて呪いにかかり、金貨に触れると蕁麻疹が出る。
+        *   無から金を生みだす能力を持つが、彼は金属アレルギーである。
         *   支払いは全て「ツケ」か「物々交換（賢者の石など）」。
         *   大富豪なのに現金を持てないため、屋台の焼き鳥1本が買えず、賢者の石で支払おうとして店主に怒られた。
 
 ### 9. 運命のギャンブラー『ジョーカー』
-*   **所属**：カジノ『ロワイヤル』（出禁）
-*   **二つ名**：「確率の支配者」「イカサマ殺し」
+*   **所属**：カジノ『ロワイヤル』（オーナー）
+*   **二つ名**：「実力だけの男」「運をねじ伏せる者」
 *   **主な武勲（伝説）**：
-    *   **コイントス戦争**：二国間の戦争の決着を、国王同士のコイントスで決めさせた。コインは地面に落ちず、直立したまま止まり「引き分け（和平）」となった。
+    *   **奴隷解放の賭け**：ある国の奴隷制度に対し「彼らが解放される方に俺の心臓を賭ける」と宣言。その直後、単身で奴隷商会を壊滅させ、国王と交渉し、法改正まで成し遂げて勝利した。「賭けは俺の勝ちだ」。
+    *   **幸福への賭け**：絶望の淵にいた少女に対し「君が世界一幸せになる方に賭ける」と宣言。彼女をあらゆる不幸から守り抜き、教育を施し、最高の結婚相手を見繕って幸せにした。「俺の予想は外れない」。
 *   **表の顔**：
-    *   キザなスーツを着こなす、謎めいた伊達男。
+    *   キザなスーツを着こなす、ギャンブル狂の伊達男。
 *   **裏の顔（ゴシップ）**：
-    *   **日常運がマイナス**。
-        *   「命を懸けたギャンブル」以外では全戦全敗。
-        *   ジャンケンで子供に負け、天気予報は必ず外れる（彼が傘を持つと晴れる）。
-        *   歩けば犬のフンを踏み、食事処では必ず注文を間違えられる不運のデパート。でもポーカーで銃口を突きつけられると無敵になる。
+    *   **運の完全欠如**。
+        *   「単純な運任せ」では絶対に勝てない呪いにかかっており、コイントスですら100％負ける。
+        *   それでもギャンブルが大好きなため、彼は「全ての不確定要素を実力（暴力・知略・技術）で確定要素に変える」ことで勝利をもぎ取っている。
+        *   イカサマは嫌いで、あくまで「実力」で勝負する。カードの並び順を全て記憶するのは、彼にとって「努力」の範疇である。
+    *   **相方は不幸の女神**。
+        *   実は背後に「不幸の女神」が憑りついており、彼女が常時運をゼロに固定している元凶。
+        *   しかし彼は彼女を「相方」として扱っており、女神が起こす理不尽なトラブルすらも楽しんで実力でねじ伏せている。端から見るとただの夫婦漫才。
 
 ### 10. 黒衣の処刑人『ジャック・ザ・リッパー』
 *   **所属**：鉄人会（掃除屋）
