Please provide the file changes to generate a commit message.

--- a/有名冒険者名鑑.md
+++ b/有名冒険者名鑑.md
@@ -164,7 +164,20 @@
         *   実は背後に「不幸の女神」が憑りついており、彼女が常時運をゼロに固定している元凶。
         *   しかし彼は彼女を「相方」として扱っており、女神が起こす理不尽なトラブルすらも楽しんで実力でねじ伏せている。端から見るとただの夫婦漫才。
 
-### 10. 黒衣の処刑人『ジャック・ザ・リッパー』
+### 10. 百の手『ジャック・ザ・リッパー』
+*   **所属**：なし（フリーランスの暗殺者）
+*   **二つ名**：「百の手の切り裂き魔」「千の指（サウザンド・フィンガー）」
+*   **主な武勲（伝説）**：
+    *   **百腕の巨人（ヘカトンケイル）**：宙を舞い、地を這う100個の「人形の手首」にナイフを持たせて操る。無数の手がカサカサと迫りくる光景はトラウマ必至。
+    *   **死の握手**：ターゲットを殺す直前、必ず本体が姿を現して「握手」を求める。握手に応じても応じなくても、背後から無数の手に刺される。
+*   **表の顔**：
+    *   旅の人形劇師。ただし人形劇に使うのは「手」だけなので、前衛的すぎて子供が泣く。
+*   **裏の顔（ゴシップ）**：
+    *   **手への異常な執着**。
+        *   「手」の動きや造形に芸術的なこだわりを持つ。
+        *   極度の寂しがり屋で、夜は100個の手首と一緒に布団に入って寝ている。「誰かと手を繋いでいないと眠れない」らしい。
+
+### 11. 処刑人『グリム』
 *   **所属**：鉄人会（掃除屋）
 *   **主な武勲（仕事）**：
     *   **「豚男爵」暗殺事件**：かつて人身売買を行っていた悪徳貴族の館に単身乗り込み、警備兵50人を殺傷せず無力化した上で、標的のみを正確に仕留めた。
@@ -177,7 +190,7 @@
         *   戦闘後は速攻で銭湯へ直行。マイ桶、マイ石鹸を持参し、3時間は出てこない。
         *   自宅はモデルルームのように綺麗だが、誰も招待されない（汚れるから）。
 
-### 11. 盾の乙女『ブリジット』
+### 12. 盾の乙女『ブリジット』
 *   **所属**：銀の盾（重装歩兵隊長）
 *   **主な武勲（伝説）**：
     *   **「生ける城門」**：ダンジョンの崩落から仲間を逃がすため、落ちてくる天井を大盾と自身の背中だけで支え続けた。
@@ -190,7 +203,7 @@
         *   「脱ぎ癖」があり、酒場で鎧をキャストオフし始めるのは王都の名物（？）。
         *   愛用の大盾には「鉄壁くん」という可愛らしい名前をつけており、毎晩磨きながら話しかけているらしい。
 
-### 12. 速射の『ビリー・ザ・キッド』
+### 13. 速射の『ビリー・ザ・キッド』
 *   **所属**：フリー
 *   **主な武勲（伝説）**：
     *   **2キロのワイバーン撃ち**：上空を飛ぶワイバーンの眉間を、2キロ先から魔導ライフルで撃ち抜いた。
@@ -205,7 +218,7 @@
 
 ## 色物・カルト枠（要注意人物）
 
-### 13. 爆裂狂『ニトロ』
+### 14. 爆裂狂『ニトロ』
 *   **所属**：狂天（爆破工作員）
 *   **罪状（武勲ではない）**：
     *   **「開かずの扉」爆破事件**：古代遺跡の仕掛けを解くのが面倒で、C4級の爆裂魔法で遺跡ごと吹き飛ばし、中の宝ごと瓦礫の山に変えた。
