feat: Add scroll-to-bottom button and refactor chat scrolling implementation using `useLayoutEffect` and `useRef`.

--- a/有名冒険者名鑑.md
+++ b/有名冒険者名鑑.md
@@ -12,7 +12,7 @@
     *   **古龍討伐**：30年前、山越えの洞窟に居座る古龍を、そこを通るために討伐。その際、折れた竜の牙が心臓に突き刺さり、三日三晩生死の境をさまよった。完治後も牙は心臓に残ったままであり、それにより「竜の加護」を得たとされる。
     *   **敵地制圧**：率いる軍で敵砦を攻略した際、敵地に取り残されたが、籠城するどころかそのまま隣の砦まで攻め落とし、縦横無尽に敵地をひっかきまわした。戦後、三日三晩生死の境をさまよう。
     *   **次元からの生還**：敵国の精鋭魔術士団に次元の狭間へ吹き飛ばされたが、1年後、大陸中央のアビスダンジョンから生きて帰還。期せずしてダンジョン踏破記録を98階まで更新した。
-    *   **深海の外交**：海峡を渡る際、船を襲った大王イカ（クラーケン）を討伐するため海に飛び込み、死んだと思われたが、人魚たちに助けられる。そのまま人魚の国『パラパラパール』に居候しながら海溝の主リヴァイアサンを討伐。人魚の国との国交を樹立した。
+    *   **深海の外交**：海峡を渡る際、船を襲った大王イカ（クラーケン）をイカ焼き……討伐するため海に飛び込み、藻屑となる。死んだと思われたが、人魚たちに助けられる。そのまま人魚の国『パラパラパール』に居候しながら海溝の主リヴァイアサンを討伐。人魚の国との国交を樹立した。
     *   **精力外交**：暗殺教団との交渉で猛毒の酒を飲み干し、三日三晩生死の境をさまよう。しかし、副作用で枯れていた性欲が劇的に増進。後にその毒を応用して魔術協会と「魔法のED薬」を開発したところ、各国貴族に爆発的に普及し、外交官100人分の国益をもたらした。
     *   **魔神との肉弾戦**：魔神が「魔力を吸収する魔剣」を持っていたため、最終的に素手（ステゴロ）で殴り倒した。全身複雑骨折し、三日三晩生死の境をさまよう。
     *   **魔剣の避雷針**：その魔剣を利用し、敵軍の雷魔法を全て吸収。限界まで溜め込んだ魔剣を敵陣に投げ込み、広範囲を爆散させて壊滅させた。至近距離で爆風を浴び、三日三晩生死の境をさまよう。
@@ -25,9 +25,9 @@
         *   孫が「ドラゴンステーキ食べたい」と呟けば、翌日には討伐したての赤竜肉が届く。
         *   孫に近づく男（5歳）に対して正式な決闘を申し込んだことがある。
 
-### 2. 轟雷の賢者『エレナ・スターライト』
+### 2. 轟雷の賢者『エレナ・ラダマントラ』
 *   **所属**：フリー（魔術協会・特別会員）
-*   **二つ名**：「移動要塞」「歩く戦略兵器」
+*   **二つ名**：「爆裂公」「移動要塞」「歩く戦略兵器」
     *   **竜の血脈**：彼女の系譜を遡ると、三匹の古龍に行き着くと言われている。
     *   **水源の調停**：水源を巡って争いの絶えない二つの村があった際、彼女は物理的に水源を吹き飛ばし、両方の村を干上がらせて争いを終わらせた。
     *   **生贄の火山**：火山を鎮めるために生贄を捧げる風習のある村に対し、彼女は火山を人為的に噴火させ、村ごと溶岩に飲み込ませた。
@@ -38,13 +38,11 @@
     *   **生活能力ゼロ**。研究以外のことには興味がなく、部屋は魔導書と実験器具とゴミの山。通称「魔女のゴミ屋敷」。
     *   **極貧賢者**。稼いだ金は全て希少な魔導触媒や古文書に消えるため、常に金欠。
         *   主食は「水と栄養バー」。たまに弟子が見かねて差し入れを持ってくるが、腐らせることも多い。
-    *   **極貧賢者**。稼いだ金は全て希少な魔導触媒や古文書に消えるため、常に金欠。
-        *   主食は「水と栄養バー」。たまに弟子が見かねて差し入れを持ってくるが、腐らせることも多い。
         *   高額依頼のポスターを見ると、クールな瞳が金貨の形におかしくなる。
 
-### 3. 至高の聖女『マリアンヌ・グレイス』
+### 3. 至高の聖女『マリアンヌ・エバーグレイス』
 *   **所属**：聖教会（破門寸前）
-*   **二つ名**：「慈愛の聖女」「死神の天敵」
+*   **二つ名**：「不滅の聖女」「死神の天敵」
 *   **主な武勲（伝説）**：
     *   **不死の肉体**：彼女自身が「何らかの呪いか祝福」による不死者であり、どれだけ生命力を削っても死ぬことがない。
     *   **血塗れの蘇生**：本来、自らの命を削る蘇生魔法を、彼女は血反吐を撒き散らしながら無限に行使する。その狂気的な姿は、敵味方問わず見る者にトラウマを植え付ける。
@@ -60,14 +58,14 @@
 
 ### 4. 弓聖『ホークアイ』
 *   **所属**：風の旅団（元リーダー）
-*   **二つ名**：「千里眼」「逃げ場なし」
+*   **二つ名**：「神を射落とした男」「千里眼」「逃げ場なし」
 *   **主な武勲（伝説）**：
     *   **星落とし（メテオ・スナイプ）**：成層圏を通過する流星を矢で射抜き、魔力で保護して燃え尽きさせず、そのまま目標に落下させる。その威力はもはや「戦略兵器」であり、彼を単なる弓兵だと思っている者はいない。
     *   **竜落とし**：かつて、同じことをドラゴンでやったことがある。
     *   **理外の直射**：戦場では地形的有利（丘）も取らず、曲射も用いない。ただ真っ直ぐに放たれた矢は、密集する敵味方をあたかも幻影のようにすり抜け、標的のみを正確に射抜く。
+    *   **森の悪夢**：森で遭遇すると、彼の矢だけ木をすり抜けてくるしなんなら貫いてくる。かつてゲリラ戦を展開し、本当に単騎で帝国を撃退した。
     *   **共振破壊**：「珍しく何発も射ているなあ」と思われた直後、堅牢な城壁が音を立てて崩れ落ちた。一点に衝撃を与え続け、物理的な共振を引き起こして破壊したとされる。
     *   **弓兵の拳**：「接近戦なら勝てる」と襲い掛かってきた重装歩兵を、鉄兜ごと素手で叩き潰した。彼の場合、そもそも接近戦も強い。
-
 *   **表の顔**：
     *   寡黙で職人気質の狩人。自然を愛するナイスミドル。
 *   **裏の顔（ゴシップ）**：
@@ -79,7 +77,7 @@
 *   **所属**：武神殿
 *   **二つ名**：「粉砕王」「素手喧嘩最強」
 *   **主な武勲（伝説）**：
-    *   **直進行軍**：中央大陸を横断する真っ直ぐな溝は、彼が単に「真っ直ぐに歩く」という修行を行った結果である。進路上のあらゆる障害物を破壊して直進し続けたため、4つの軍と戦争になった。
+    *   **直進行軍**：中央大陸を横断する真っ直ぐな溝は、彼が単に「真っ直ぐに歩く」という修行を行った結果である。進路上のあらゆる障害物を破壊して直進し続けたため、8つの砦と4つの軍と戦争になった。
     *   **虫の駆除**：マフィアのボスと会食の際、ボスの頭に毒虫が止まったため、「危ない！」と叫んでボスごと叩き潰してしまった。悪気はなかった。
     *   **整地（マウンテン・クラッシュ）**：「月が見えない」という理由だけで、邪魔な山を素手で叩き潰して水平に整地した。
 *   **表の顔**：
@@ -95,7 +93,7 @@
 *   **主な武勲（伝説）**：
     *   **マフィアの同居人**：一ヶ月間、敵対マフィアのボスの寝室に勝手に住み着いていた。一緒に食事をし、風呂に入り、同じベッドで寝ていたが、ボスは彼を「空気」として認識していた。退去時に「お世話になりました」と置き手紙を残した結果、ボスは恐怖のあまり引退した。
     *   **枕元の警告**：戦争中の二国の王の寝室に侵入し、互いの国の至宝である剣を入れ替えて枕元に置いた。「いつでも殺せる」という無言の圧力により、両国は即座に戦争をやめた。
-    *   **同時粛清**：対立する裏組織の大物3人を、別々の場所にいたにも関わらず「同日同時刻」に殺害した。そのとき取引中だった4人目の大物は、即座に彼の軍門に下った。
+    *   **同時粛清**：対立する裏組織の大物3人を、別々の場所にいたにも関わらず「同日同時刻」に殺害した。そのとき取引中だった4人目の大物は、即座に彼の軍門に下ったが、その瞬間死んだ。
     *   **暗殺のこだわり**：マフィアのボスを一度は追い詰めたが、「シチュエーションがしっくりこない」という理由で見逃し、後日改めて殺し直したことがある。彼なりの美学があるらしい。
     *   **徒歩殲滅**：「見つけさえすればどうとでもなる」と豪語していた敵対ギルドが、正面からとことこ歩いてきた彼に、成す術なく殲滅された。隠密しなくても普通に強い。
 
@@ -123,7 +121,7 @@
     *   **極度の三半規管の弱さ**。
         *   **限界時間は3分**：ドラゴンの激しい動きに耐えられず、乗ってから3分で限界を迎える。
 *   **七竜姉妹（プロフィール）**：
-    1.  **長女：紅（ルージュ）** - バトル大好き。暴力的を愛情表現だと思ってる。気に入らないと燃やす。
+    1.  **長女：紅（ルージュ）** - バトル大好き。暴力的を愛情表現だと思ってる。気に入らないと噛んだり燃やしたりする。
     2.  **次女：蒼（アズール）** - 知識大好き。魔導書コレクター。インテリだが話が長い。
     3.  **三女：翡翠（ジェイド）** - 植物大好き。医学薬学の神。たまにらりってる。
     4.  **四女：白（ブラン）** - 宝石。美容グッズ好き。カインにマッサージを要求する。
@@ -153,6 +151,7 @@
 *   **主な武勲（伝説）**：
     *   **奴隷解放の賭け**：ある国の奴隷制度に対し「彼らが解放される方に俺の心臓を賭ける」と宣言。その直後、単身で奴隷商会を壊滅させ、国王と交渉し、法改正まで成し遂げて勝利した。「賭けは俺の勝ちだ」。
     *   **幸福への賭け**：絶望の淵にいた少女に対し「君が世界一幸せになる方に賭ける」と宣言。彼女をあらゆる不幸から守り抜き、教育を施し、最高の結婚相手を見繕って幸せにした。「俺の予想は外れない」。
+    *   **不幸の道連れ**：しばしば勝てないと悟ると、仲良くなって相手ごと不幸に引きずり込む手段をとる。
 *   **表の顔**：
     *   キザなスーツを着こなす、ギャンブル狂の伊達男。
 *   **裏の顔（ゴシップ）**：
@@ -162,41 +161,50 @@
         *   イカサマは嫌いで、あくまで「実力」で勝負する。カードの並び順を全て記憶するのは、彼にとって「努力」の範疇である。
     *   **相方は不幸の女神**。
         *   実は背後に「不幸の女神」が憑りついており、彼女が常時運をゼロに固定している元凶。
-        *   しかし彼は彼女を「相方」として扱っており、女神が起こす理不尽なトラブルすらも楽しんで実力でねじ伏せている。端から見るとただの夫婦漫才。
+        *   しかし彼は彼女を「相方」として扱っており、女神が起こす理不尽なトラブルすらも楽しんで実力でねじ伏せている。彼女を孤独にしなかったのは彼だけである。
+    *   **相方は幸運の女神**。        
+        *   ある種の条件がそろった時、すべての幸運が彼に味方する。この時の彼は神すらも退ける無敵状態となる。
 
-### 10. 百の手『ジャック・ザ・リッパー』
+
+### 10. 百の手『ジャック・ザ・リッパーリッパー』
 *   **所属**：なし（フリーランスの暗殺者）
 *   **二つ名**：「百の手の切り裂き魔」「千の指（サウザンド・フィンガー）」
 *   **主な武勲（伝説）**：
-    *   **百腕の巨人（ヘカトンケイル）**：宙を舞い、地を這う100個の「人形の手首」にナイフを持たせて操る。無数の手がカサカサと迫りくる光景はトラウマ必至。
-    *   **死の握手**：ターゲットを殺す直前、必ず本体が姿を現して「握手」を求める。握手に応じても応じなくても、背後から無数の手に刺される。
+    *   **百腕の巨人（ヘカトンケイル）**：宙を舞い、地を這う100個の「人形の手」にナイフを持たせて操る。
+    *   **死の握手**：殺しのターゲットが定まると、本体が赴いて握手をしていくとされる。現在において彼の手から逃れたものはいないため、彼の顔を知る者もいない。
+    *   **手の増殖**：ターゲットを殺し終えると手が増える。
 *   **表の顔**：
-    *   旅の人形劇師。ただし人形劇に使うのは「手」だけなので、前衛的すぎて子供が泣く。
+    *   しがない旅の人形劇師。
 *   **裏の顔（ゴシップ）**：
     *   **手への異常な執着**。
         *   「手」の動きや造形に芸術的なこだわりを持つ。
         *   極度の寂しがり屋で、夜は100個の手首と一緒に布団に入って寝ている。「誰かと手を繋いでいないと眠れない」らしい。
 
-### 11. 処刑人『グリム』
-*   **所属**：鉄人会（掃除屋）
+### 11. 清掃人『グリム』
+*   **所属**：ギルド（清掃員）
 *   **主な武勲（仕事）**：
-    *   **「豚男爵」暗殺事件**：かつて人身売買を行っていた悪徳貴族の館に単身乗り込み、警備兵50人を殺傷せず無力化した上で、標的のみを正確に仕留めた。
-    *   **音速の解体ショー**：大型魔獣を瞬きする間に解体することで知られる。素材の剥ぎ取り速度はギルド一。
+    *   **「大掃除」**：人身売買組織のアジトを「不衛生なゴミ」として処理。構成員を分別（無力化）し、ボスを焼却（排除）。館はピカピカに磨き上げられていた。
+    *   **染み抜き**：どれほど凄惨な現場でも、彼が通った後は血痕一つ残らない。証拠隠滅のプロフェッショナル。
+    *   **追加清掃**：ターゲットを掃除した後、依頼人も悪党だったのでこれも掃除した。
+
 *   **表の顔**：
-    *   鉄人会の汚れ仕事を請け負う無口な暗殺者。
+    *   ギルドのロビーをモップ掛けしている、無口で真面目な清掃員。モップ掛けの技術は神業。
 *   **裏の顔（ゴシップ）**：
     *   **病的な潔癖症**。
-        *   「汚れる仕事」が専門なのに、血や内臓が大嫌い。返り血を避ける技術だけが異常に発達した結果、今の超高速戦闘スタイルが完成した。
+        *   「社会のゴミ」を掃除しているだけなので、殺人という認識がない。
+        *   返り血を「汚れ」として極端に嫌うため、敵に指一本触れさせず、自分も触れずに始末する遠隔・罠・魔法に長ける。
         *   戦闘後は速攻で銭湯へ直行。マイ桶、マイ石鹸を持参し、3時間は出てこない。
         *   自宅はモデルルームのように綺麗だが、誰も招待されない（汚れるから）。
 
-### 12. 盾の乙女『ブリジット』
-*   **所属**：銀の盾（重装歩兵隊長）
+### 12. 盾の乙女『ブリギット・ティーンエイジャー』
+*   **所属**：王立騎士団（休日はダンジョン探索）
 *   **主な武勲（伝説）**：
     *   **「生ける城門」**：ダンジョンの崩落から仲間を逃がすため、落ちてくる天井を大盾と自身の背中だけで支え続けた。
     *   **オーガ・スローイング**：突進してきたオーガ（巨鬼）を、盾ごと弾き飛ばしたことがある。
+    *   **魔性（物理）**：オークやトロルにしばしば求愛される。求愛行動（物理攻撃）を全て叩き伏せていたら、いつの間にか彼らの「女神」として崇められていた。
+
 *   **表の顔**：
-    *   身長2メートルの巨女。仲間を守る頼れる姉御。
+    *   本職は騎士だが、休日は「趣味」と称してダンジョンに潜る週末冒険者。身長2メートルの巨女。
 *   **裏の顔（ゴシップ）**：
     *   **酒乱の極み**。
         *   素面（シラフ）では真面目だが、酒が入るとタガが外れる。
@@ -206,8 +214,9 @@
 ### 13. 速射の『ビリー・ザ・キッド』
 *   **所属**：フリー
 *   **主な武勲（伝説）**：
-    *   **2キロのワイバーン撃ち**：上空を飛ぶワイバーンの眉間を、2キロ先から魔導ライフルで撃ち抜いた。
-    *   **早撃ち0.1秒**：酒場の喧嘩で、相手が剣を抜く前に3発撃ち込み（急所は外して）、ズボンのベルトを落とさせた。
+    *   **不可視の速射（インビジブル・ショット）**：彼が銃を抜く瞬間を見た者はいない。銃声が響いた時には既に銃はホルスターに収まっており、標的の武器だけが弾き飛ばされている。
+    *   **雨切り**：突然の雨に襲われた際、落ちてくる雨粒を全て撃ち落とし、一滴も濡れずに宿まで戻ったとされる（ただし弾薬費で破産しかけた）。
+    *   **瞬きの間の決闘**：酒場で喧嘩になった際、相手が瞬きをした一瞬の間に、相手のベルト、サスペンダー、靴紐を全て撃ち抜いてパンツをずり落とさせた。
 *   **表の顔**：
     *   帝国の最新鋭「魔導銃」を操るクールなガンマン。
 *   **裏の顔（ゴシップ）**：
@@ -216,9 +225,147 @@
         *   銃の手入れ中に話しかけるとマジギレする。
         *   新しいスコープや火薬の話になると、早口で止まらなくなり、相手が引いていることに気づかないコミュ障の一面も。
 
+
+### 14. 嵐の王『テンペスト』
+*   **所属**：風の旅団（相談役）
+*   **二つ名**：「磁界の王」「鉄の嵐」
+*   **主な武勲（伝説）**：
+    *   **神喰らい**：かつて海で遭難し、漂着した無人島にいた「神獣」を、あまりの空腹で焼いて食ってしまった。以来、人の身でありながら天候と磁場を操る理外の存在となった。
+    *   **鉄の降雨（アイアン・レイン）**：敵の一軍を壊滅させるため、上空に待機させた戦艦100隻と無数の大砲を「雨」として降らせ、物理的に圧殺した。
+*   **表の顔**：
+    *   豪快に笑う、隻眼の船乗り風の男。
+*   **裏の顔（ゴシップ）**：
+    *   **歩く磁石**。
+        *   神獣を食った副作用で、強力に「鉄を引き付ける」体質になってしまった。
+        *   油断するとフォークやナイフが顔に飛んでくるため、食事は常に手づかみ。
+        *   **大砲コレクター**：引き寄せる性質のせいか、大砲や戦艦を異常に好む（あるいは向こうから寄ってくる）。彼の家の周りには、いつの間にかスクラップの山ができている。
+
+### 15. 死霊公爵『オルクス』
+*   **所属**：旧オルクス侯爵領（領主）
+*   **二つ名**：「拒絶する領土」「とこしえの守護者」
+*   **主な武勲（伝説）**：
+    *   **三国の防衛戦**：交通の要衝であった彼の領地は、かつて3つの大国から同時に侵攻を受けた。民がことごとく死に絶える中、彼は悪魔に魂を売って戦い続け、侵略軍を全て「新たな領民（死者）」に加えて撃退した。
+    *   **領土の迷宮化**：彼の領土は現在、全体が巨大なダンジョンと化しており、あらゆる生者の侵入を拒んでいる。
+*   **表の顔**：
+    *   朽ちた玉座に座り、物言わぬ民を見守り続ける孤高の王。
+*   **裏の顔（ゴシップ）**：
+    *   **過保護な領主様**。
+        *   死んでゾンビやスケルトンになった領民全員の名前、家族構成、生前の悩みを完璧に記憶している。
+        *   スケルトンが腕を無くして帰ってくると「ああ、パン屋のトムか！すぐに治してやるからな！」と大慌てで修復してくれる。
+        *   侵入者を排除するのは「領民の安眠を妨害するから（あと芝生を踏むから）」。
+
+    *   **主な領民（ネームド）**：
+        *   **集合骸骨（レギオン）**：無数の兵士の骸骨が合体した、城壁よりも巨大な骸骨巨人。
+        *   **縫合豚（ポーク・パッチ）**：巨大なツギハギの豚。愛嬌があるが、踏まれると死ぬ。
+        *   **肉人形（ミート・マリオネット）**：新鮮な肉でできた異形の人形。美容に気を使っているらしい。
+
+
+### 16. 斬鉄の『カグラ』
+*   **所属**：東方剣士団（師範代）
+*   **二つ名**：「剣神」「万物両断」
+*   **主な武勲（伝説）**：
+    *   **海割り**：「船がない」という理由で、海を一刀両断して対岸の島まで歩いて渡った。斬られた海水は彼女が渡り切るまで三日三晩分かれたままだった。
+    *   **神速の解体**：襲ってきた古龍を、抜刀したと認識されない速度ですれ違いざまに解体した。龍は自分が死んだことに気づかず数歩歩いてから、肉片と素材（きれいに分別済み）になって崩れ落ちた。
+*   **表の顔**：
+    *   凛とした和装の美女剣士。常に目を閉じ、帯に差した刀には厳重に封印布が巻かれている。
+    *   **旅の目的**：伝説の刀匠である父が打ち、世界に散らばった「呪いの魔剣」を回収して封印すること。
+*   **回収した六振り（魔剣）**：
+    1.  **壱『赤熱（セキネツ）』**：血液を燃料に爆発的な熱を放つ魔剣。
+    2.  **弐『絶対零度（アブソリュート）』**：斬った対象から急激に熱と命を奪う魔剣。赤熱と対になり、カグラ自体は魔剣の不利を帳消しにできる。
+    3.  **参『風切（カザキリ）』**：抜刀した瞬間悲鳴のような金切り声を上げる魔剣。音波を操り、鼓膜や眼球、人肉程度なら容易に裂く。
+    4.  **四『紫電（シデン）』**：所有者の命を吸って紫の雷を放つ、高燃費な刃。抜刀自体が神速になるが術者の筋繊維はズタズタになる。
+    5.  **五『重力（グラビティ）』**：斬った対象の血液を凝固させ、行動を麻痺させる。かすり傷でも10Kg程度の重さになる。また、カグラは自分の血液を鉄球にして飛ばすなどする。
+    6.  **六『吸血（ブラッド）』**：斬った相手の血液を、細かい刀身と圧力差で全て吸い尽くす。逆に送り込んで破裂させることもする。
+*   **裏の顔（ゴシップ）**：
+    *   **重度の先端恐怖症**。
+        *   「尖っているもの」が視界に入ると腰を抜かす。戦闘で目を閉じているのは、相手の武器（切っ先）を見ないため。心眼とかではない。
+        *   愛刀は切れ味ゼロの「木刀」。伝説の武勲は全て、恐怖のあまりパニックになって手近な真剣（あるいはただの棒きれ）を振り回した結果である。
+        *   料理はもちろん「ピーラー」愛用。包丁は直視できない。
+
+### 17. 召喚姫『アリス・マリス』
+*   **所属**：魔法学園（生徒会長）
+*   **二つ名**：「魔界の扉」「終わりの始まり」
+*   **主な武勲（伝説）**：
+    *   **魔王召喚**：「ランダム召喚の絵本」でうっかり辺境魔王の娘（子供）を召喚してしまった。
+        *   前代未聞の事態に親同士（領主と魔王）が介入し、すったもんだの末に「子供たちが大人になるまで仲良くする」という平和協定が結ばれた。
+        *   その証として、アリス側には「5人の手練れ魔族」、魔王側には「5人の手練れ人間」が召使いとして交換留学（人質）に出された。アリスの登下校には常に上位魔族の執事が付き従う。
+    *   **辺境魔王の娘『マリス・サタナキア』**：
+        *   お転婆で怪力。アリスの最初の人外（ともだち）。
+        *   人間界の「お菓子」と「ファッション」に夢中。月に一度の定例お茶会（サバト）を何より楽しみにしている。
+    *   **魔族側留学生（アリスの召使い）**：
+        1.  **執事セバス（アークデーモン）**：紳士。鋼鉄の筋肉とボクシングセンスを持つ。人間はゴミだと思っていたが、アリスの純粋さに触れ感銘を受ける。彼女は魔王になって人類を統べるべきであると思っている。
+        2.  **剣士『オボロ』（妖刀使い）**：最強を目指す修羅。護衛など嫌でしかたなかったが、アリスといると刺客がいっぱい来ていい修行になると上機嫌。知らん間にアリスになつかれて、悪い気もしてない。
+        3.  **メイドのミミ（サキュバス）**：アリスにかわいい服を着せようとするお洒落番長。美こそすべての世界観で生きているので、アリスがすべてと思っている。
+        4.  **護衛のワン（フェンリル）**：犬。アリス好き。
+        5.  **家庭教師の骨（リッチ）**：古代語や禁術を教え込み、アリスを「歩く災害」に育てている。才能が大好きであり、魔王を召喚したアリスを世界の宝だと思っている。よくフェンリルにくわえられる。
+        6.  **庭師の土（ゴーレム）**：花を愛する心優しい巨体。アリスのぬいぐるみの修繕も得意。
+   
+    *   **人間側留学生（マリスの召使い）**：
+        1.  **執事ヴィクトル（元近衛騎士団長）**：鬼の礼儀作法指導でマリスを震え上がらせている。はじめは人類のためにマリスを殺すつもりだったが、死んだ娘に似てて無理だった。
+        2.  **メイドのアン（元暗殺者）**：マリスの背後に忍び寄る敵を無言で処理する殺戮マシーン。はじめは任務として護衛をしていたが、目をキラキラさせて暗殺技術を学びに来るマリスに胸キュンするようになる。
+        3.  **護衛のジーク（元勇者パーティ前衛）**：マリスの良い組み手相手。物理・魔法耐性が高い。子供を守ることに理由なんかいらないタイプ。
+        4.  **家庭教師エレノア（大賢者）**：人間界の常識と経済学を叩き込んでいる。魔力の塊であるマリスが超かわいい。
+        5.  **料理人ピエール（三ツ星シェフ）**：見習い剣士。自分より格上にくってかかるタイプのアホ。至高のスイーツで魔王勢の胃袋を完全に掌握した。
+    *   **百鬼夜行**：彼女が散歩すると、影の中から無数の魔物が這い出てきてパレードになる。
+*   **表の顔**：
+    *   いつも大きなぬいぐるみを抱えた、おっとりした少女。
+*   **裏の顔（ゴシップ）**：
+    *   **対人恐怖症（コミュ障）**。
+        *   人間が怖くて目を見て話せない。友達は全員「人外（モンスター）」。
+        *   魔界のケルベロスを「ワンちゃん」と呼んでモフるのが癒し。人間より魔物の方が心が通じ合うらしい。
+
+### 18. 轟斧の『バルバロス』
+*   **所属**：魔導ギルド（※本人は魔導師のつもりだが、登録区分は「重戦士」）
+*   **二つ名**：「物理の賢者」「筋肉魔法少女（自称）」
+*   **主な武勲（伝説）**：
+    *   **隕石召喚（メテオ・ストライク）**：攻城兵器を用いても落ちない要塞に対し、近くの山を引き抜いて投擲し、更地にした魔法（物理）。
+    *   **空間転移（ハイスピード・ダッシュ）**：一歩で50メートル移動する脚力により、敵の目の前から消失する。彼はこれを高位の時空魔法だと信じている。
+*   **表の顔**：
+    *   異様に小さな三角帽子とボロボロのローブを身に着けた、身長3メートルの筋肉ダルマ。手には「杖」と主張するアダマンタイトの柱を持っている。
+*   **裏の顔（ゴシップ）**：
+    *   **自分を「深窓の令嬢のような繊細な魔術師」だと思い込んでいる精神異常者**。
+        *   「MP（マッスル・ポイント）が切れた」と言ってすぐ腹をすかせる。
+        *   図書館に入るたびに、本をめくる動作だけで紙を破り、弁償させられている。
+        *   「私の魔法（拳）で癒してあげましょう」と言われると、骨が砕けるので誰も怪我を申告しない。
+
+### 19. 時空の旅人『クロノス』
+*   **所属**：時計塔（管理人）
+*   **二つ名**：「やり直し（リセット）」「完全無欠」
+*   **主な武勲（伝説）**：
+    *   **塔内最強（クロック・ワークス）**：彼の時間操作は「時計塔の内部」で完全なものとなる。塔内では時間を停止・逆行・加速させることが自在であり、文字通り「神」として君臨する。
+    *   **無傷の勝利（パーフェクト・ゲーム）**：あらゆる攻撃を紙一重で回避し、最小限の動きで敵を制圧する。冒険者になって以来、一度たりとも被弾した記録がない（被弾した世界線は全て『無かったこと』にして捨てているから）。
+*   **表の顔**：
+    *   神経質なまでに身だしなみを整えた、潔癖症の紳士。外出を極端に嫌い、常に塔の最上階にいる。
+*   **裏の顔（ゴシップ）**：
+    *   **極度のリセット中毒者**。
+        *   「納得がいかない」という理由だけで、日常的に時間を巻き戻す。塔内では「紅茶が渋い」だけで数時間戻ることも。
+    *   **内弁慶**。
+        *   塔の外に出ると能力に**「制限時間（タイムリミット）」**が課せられる。
+            *   活動限界は3分（カップ麺ができるまで）。それを過ぎると猛烈な吐き気と目眩で戦闘不能になる（ウルトラマン的な）。
+        *   **時計塔の正体**：実は塔ではなく、時空の狭間をさすらう古代の**「時空戦艦」**。
+            *   神出鬼没に現れては消えるため、王都でも「今日は蜃気楼が見える」程度にしか認識されていない。
+            *   内部はあまりに広大で、「ダンジョン」として認定されている。
+            *   カジノ、温泉、遊園地などの娯楽施設が完備されており、クロノスは引きこもりライフを満喫している（外に出たくない最大の理由）。
+
+### 20. 光の勇者『ライトニング』
+*   **所属**：勇者パーティ（消耗品）
+*   **二つ名**：「フルメタル聖剣ジャケット」「聖剣の付属品」「動く鞘（人間）」
+*   **主な武勲（伝説）**：
+    *   **自動防御（オート・ガード）**：睡眠中だろうとトイレ中だろうと、殺気を感じれば聖剣が勝手に腕を動かして持ち主を守る。
+    *   **自動魔王殺し**：魔王城に単身突撃し（聖剣に引きずられて）、泣き叫びながら魔王をミンチにした。
+    *   **国王暗殺（ジャッジメント）**：魔王討伐を依頼してきた国王の首も、謁見中に聖剣が勝手に刎ね飛ばした（王も裏で悪いことをしていたため）。結果、国のお尋ね者になった。
+
+*   **表の顔**：
+    *   常にフルフェイスの兜を被り、一言も喋らず、機械のように正確な剣技を振るう寡黙な騎士。
+*   **裏の顔（ゴシップ）**：
+    *   **実は「聖剣」が本体**。
+        *   ライトニング（人間）は聖剣に寄生されているただの村人A。
+        *   聖剣が筋肉に電流を流して無理やり動かしているため、兜の中では常に「痛い！帰りたい！田舎に帰して！」と号泣している。
+        *   「光の勇者」と呼ばれるのは、聖剣が放つ電流で本人が発光している（感電している）から。
+
 ## 色物・カルト枠（要注意人物）
 
-### 14. 爆裂狂『ニトロ』
+### 21. 爆裂狂『ニトロ』
 *   **所属**：狂天（爆破工作員）
 *   **罪状（武勲ではない）**：
     *   **「開かずの扉」爆破事件**：古代遺跡の仕掛けを解くのが面倒で、C4級の爆裂魔法で遺跡ごと吹き飛ばし、中の宝ごと瓦礫の山に変えた。
@@ -227,7 +374,11 @@
     *   「爆発こそ芸術、破壊こそ創造」という危険思想の持ち主。
     *   ギルドのブラックリスト筆頭だが、火力の高さだけは認められており、誰もやりたがらない「岩盤破砕」などの土木工事依頼が来ることもある。
 
-### 14. 猛獣使い『ロプシーの婆様』
+    *   **爆弾スライム（とばっちり）**：
+        *   「爆弾がスライムみたいに動けばいいのに」と思いつき、実際に生体兵器として開発した。
+        *   しかし管理が杜撰だったため脱走。現在は王都の地下水路で勝手に繁殖しており、駆除しようとすると爆発するため手がつけられない社会問題になっている。
+
+### 22. 猛獣使い『ロプシーの婆様』
 *   **所属**：なし（スラム街・ロプシー族の長老）
 *   **影響力（伝説）**：
     *   **「赤の愚連隊」失踪事件**：かつてスラム街でロプシー族に手を出したチンピラ集団が、翌日、全員地下水路で見つかった。全身をネズミに齧られた跡があり、以降、誰も婆様には逆らわなくなった。
